thid commit, favicon added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Light by Numero Uno from the Noun Project -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Light Bright It Up</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="57x57" href="assest/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="assets/android-chrome-192x192.png" sizes="192x192">
+  <meta name="msapplication-square70x70logo" content="assets/small-tile.png" />
+  <meta name="msapplication-square150x150logo" content="assets/medium-tile.png" />
+  <meta name="msapplication-wide310x150logo" content="assets/wide-tile.png" />
+  <meta name="msapplication-square310x310logo" content="assets/large-tile.png" />
+  <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -15,9 +37,8 @@
   <main>
     <section class="aside">
       <div class="wrapper">
-        <button class="light-theme-button">Dark/Light Theme</button>
-        <button class="clear-all">Clear all</button>
-        <button class="flash-light">Flash All of the Lights</button>
+        <button class="flash-light">Flashing Lights</button>
+        <button class="clear-all">Clear All</button>
         <form action="GET">
           <fieldset>
             <legend>Pick your colour</legend>
@@ -419,34 +440,10 @@
           <a href="" class="light-container desktop"></a>
           <a href="" class="light-container desktop"></a>
         </div>
-        <div class="flex-row">
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-        </div>
       </div>
     </section>
   </main>
-  <footer id="share" class="wrapper"></footer>
+  <footer id="share" class="wrapper"><span><i class="fab fa-twitter"></i></span> Share your design on Twitter!</footer>
   <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
   <script src="jssocials.min.js"></script>
   <script src="script.js"></script>
