--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <!-- Light by Numero Uno from the Noun Project -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Light Bright It Up</title>
+  <meta property="og:title" content="Light Bright 2.0">
+  <meta property="og:description" content="Create vibrant designs on this 21st century light bright.">
+  <meta property="og:image" content="https://i.ibb.co/1mYSCMk/Screen-Shot-2019-02-17-at-10-25-46-AM.png">
+  <meta property="og:url" content="http://alannaoconnor.com/project-3">
+  <meta name="twitter:title" content="Light Bright 2.0">
+  <meta name="twitter:description" content="Create vibrant designs on this 21st century light bright.">
+  <meta name="twitter:image" content="https://i.ibb.co/1mYSCMk/Screen-Shot-2019-02-17-at-10-25-46-AM.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Light bright of a floral design with red, pink, blue, purple, and white flowers.">
+  <title>Light Bright 2.0</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="57x57" href="assest/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png">
@@ -31,59 +39,59 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
-
 <body class="animated lightSpeedIn">
+  <a href="#main-content" class="skip-link">Skip to main content</a>
   <header class="wrapper">
-    <h1>Light Up Your Life</h1>
+    <h1>Lite Up Your Life</h1>
   </header>
-  <main class="wrapper">
+  <main class="wrapper" id="main-content">
+    <!-- grid options begin -->
     <section class="grid-options">
       <form action="GET">
         <fieldset>
-          <legend>Pick your colour</legend>
+          <legend>Pick a colour</legend>
           <div class="fieldset-flex-container">
             <input type="radio" id="yellow" name="color" value="yellow">
             <label for="yellow">Yellow</label>
-
             <input type="radio" id="red" name="color" value="red">
             <label for="red">Red</label>
-
             <input type="radio" id="orange" name="color" value="orange">
             <label for="orange">Orange</label>
-
             <input type="radio" id="pink" name="color" value="pink">
             <label for="pink">Pink</label>
-
             <input type="radio" id="purple" name="color" value="purple">
             <label for="purple">Purple</label>
-
             <input type="radio" id="blue" name="color" value="blue">
             <label for="blue">Blue</label>
-
             <input type="radio" id="green" name="color" value="green">
             <label for="green">Green</label>
-
             <input type="radio" id="white" name="color" value="white">
             <label for="white">White</label>
           </div>
         </fieldset>
       </form>
       <div class="grid-options-extras">
-        <button class="flash-light">Flashing Lights</button>
+        <button class="flash-light">Flash Lights</button>
         <button class="clear-all">Clear All</button>
         <ul>
           <l1>
-            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2F&text=Check+out+the+cool+design+I+made+using+this+light+bright+web+app."
+            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2Fproject-3&text=Check+out+this+awesome+digital+light+bright+application."
               target="_blank" class="social-link">
-              <i class="fab fa-twitter" class="social-link"></i>
-              Share your design on Twitter
+              <i class="fab fa-twitter" class="social-link" aria-hidden="true"><span class="sr-only">Share Light Bright 2.0 on Twitter.</span></i>
             </a>
           </l1>
+          <li>
+            <a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.alannaoconnor.com%2Fproject-3%2F" target="_blank" class="social-link">
+              <i class="fab fa-facebook-f" class="social-link" aria-hidden="true"><span class="sr-only">Share Light Bright 2.0 on Facebook.</span></i>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
+    <!-- grid options end -->
+    <!-- main grid begins -->
     <section class=main-grid>
-      <!-- desktop flex grid begins // with 14 rows -->
+      <!-- desktop flex grid begins // with 13 rows -->
       <div class="flex-container">
         <!-- row with 23 containers -->
         <div class="flex-row">
@@ -417,34 +425,9 @@
           <a href="" class="light-container desktop remove"></a>
           <a href="" class="light-container desktop remove"></a>
         </div>
-        <!-- row with 22 containers -->
-        <div class="flex-row">
-          <a href="" class="light-container desktop remove"></a>
-          <a href="" class="light-container desktop remove"></a>
-          <a href="" class="light-container desktop remove"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-          <a href="" class="light-container desktop"></a>
-        </div>
       </div>
       <!-- desktop flex grid ends // 24 rows -->
-      <!-- mobile flex grid starts // 10 rows  -->
+      <!-- mobile flex grid starts // 11 rows  -->
       <div class="flex-container-mobile">
         <!-- flex row with 11 containers -->
         <div class="flex-row">
@@ -584,13 +567,16 @@
         <!-- mobile grid ends -->
       </div>
     </section>
+    <!-- main grid ends -->
   </main>
+  <!-- footer begins -->
   <footer class="wrapper">
     <p>&copy; Alanna O'Connor 2019</p>
   </footer>
+  <!-- footer ends -->
   <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='
     crossorigin='anonymous'></script>
+  <script scr="html2canvas.js"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
