eighth commit, removed on load animation and revised js for responsive.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:title" content="Light Bright 2.0">
-  <meta property="og:description" content="Create vibrant designs on this 21st century light bright.">
-  <meta property="og:image" content="https://i.ibb.co/1mYSCMk/Screen-Shot-2019-02-17-at-10-25-46-AM.png">
-  <meta property="og:url" content="http://alannaoconnor.com/project-3">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@_AlannaOConnor">
+  <meta name="twitter:creator" content="@_AlannaOConnor">
   <meta name="twitter:title" content="Light Bright 2.0">
   <meta name="twitter:description" content="Create vibrant designs on this 21st century light bright.">
-  <meta name="twitter:image" content="https://i.ibb.co/1mYSCMk/Screen-Shot-2019-02-17-at-10-25-46-AM.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://i.imgur.com/SlXtqVV.png">
   <meta name="twitter:image:alt" content="Light bright of a floral design with red, pink, blue, purple, and white flowers.">
+  <meta property="og:title" content="Light Bright 2.0">
+  <meta property="og:description" content="Create vibrant designs on this 21st century light bright.">
+  <meta property="og:image" content="https://i.imgur.com/SlXtqVV.png">
+  <meta property="og:url" content="http://alannaoconnor.com/light-bright">
+  <meta name="twitter:card" content="summary_large_image">
   <title>Light Bright 2.0</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png">
@@ -39,7 +42,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="animated lightSpeedIn">
+<body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <header class="wrapper">
     <h1>Lite Up Your Life</h1>
@@ -75,13 +78,13 @@
         <button class="clear-all">Clear All</button>
         <ul>
           <l1>
-            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2Fproject-3&text=Check+out+this+awesome+digital+light+bright+application."
+            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2Flight-bright&text=Check+out+this+awesome+digital+light+bright+application."
               target="_blank" class="social-link">
               <i class="fab fa-twitter" class="social-link" aria-hidden="true"><span class="sr-only">Share Light Bright 2.0 on Twitter.</span></i>
             </a>
           </l1>
           <li>
-            <a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.alannaoconnor.com%2Fproject-3%2F" target="_blank" class="social-link">
+            <a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.alannaoconnor.com%2Flight-bright%2F" target="_blank" class="social-link">
               <i class="fab fa-facebook-f" class="social-link" aria-hidden="true"><span class="sr-only">Share Light Bright 2.0 on Facebook.</span></i>
             </a>
           </li>
@@ -576,7 +579,6 @@
   <!-- footer ends -->
   <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='
     crossorigin='anonymous'></script>
-  <script scr="html2canvas.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
