ninth commit, removed asset and updated meta tags

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="twitter:creator" content="@_AlannaOConnor">
   <meta name="twitter:title" content="Light Bright 2.0">
   <meta name="twitter:description" content="Create vibrant designs on this 21st century light bright.">
-  <meta name="twitter:image" content="https://i.imgur.com/SlXtqVV.png">
+  <meta name="twitter:image" content="https://i.imgur.com/gCIW0r2.png">
   <meta name="twitter:image:alt" content="Light bright of a floral design with red, pink, blue, purple, and white flowers.">
   <meta property="og:title" content="Light Bright 2.0">
   <meta property="og:description" content="Create vibrant designs on this 21st century light bright.">
-  <meta property="og:image" content="https://i.imgur.com/SlXtqVV.png">
+  <meta property="og:image" content="https://i.imgur.com/gCIW0r2.png">
   <meta property="og:url" content="http://alannaoconnor.com/light-bright">
   <meta name="twitter:card" content="summary_large_image">
   <title>Light Bright 2.0</title>
@@ -78,7 +78,7 @@
         <button class="clear-all">Clear All</button>
         <ul>
           <l1>
-            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2Flight-bright&text=Check+out+this+awesome+digital+light+bright+application."
+            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.alannaoconnor.com%2Flight-bright&text=Check+out+this+awesome+digital+light+bright!"
               target="_blank" class="social-link">
               <i class="fab fa-twitter" class="social-link" aria-hidden="true"><span class="sr-only">Share Light Bright 2.0 on Twitter.</span></i>
             </a>
