--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <header class="wrapper">
-    <h1>Lite Up Your Life</h1>
+    <h1>Light Bright 2.0</h1>
   </header>
   <main class="wrapper" id="main-content">
     <!-- grid options begin -->
     <section class="grid-options">
       <form action="GET">
         <fieldset>
-          <legend>Pick a colour</legend>
+          <legend>Select a colour:</legend>
           <div class="fieldset-flex-container">
             <input type="radio" id="yellow" name="color" value="yellow">
             <label for="yellow">Yellow</label>
